css/main-content.css
/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
/* GENERAL PAGE CONTENT /////////////////////////////////////// */
.main-content {
  max-width: 1200px;
  margin: auto;
  padding: 20px 0;
}

/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
/* MAIN PAGE CONTENT /////////////////////////////////////// */
.heading {
  margin: 100px auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

@media (max-width: 700px) {
  .heading {
    margin: 10px auto;
  }
}

.hero-section {
  width: 100%;
  min-width: 300px;
  color: white;
  font: 500 15px Raleway;
  padding: 20px;
  flex: 1;
}

.hero-section-container {
  position: relative;
  /* overflow: hidden; */
}

.hello,
.hero-heading,
.hero-content {
  padding: 20px 0;
  font: 600 30px Neonsign;
  color: aqua;
  filter: var(--text-drop-shadow);
  position: relative;
  /* left: -100%; */
  /* transition: all 1s ease-in-out 1s; */
}

.hello,
.hero-heading {
  filter: var(--heading-drop-shadow);
}

/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
/* HERO SECTION CONTENT BLUR ANIMATION //////////////////////// */
.hello {
  opacity: 0;
  animation: hello-blur-effect 5s ease;
  opacity: 1;
}

.hero-heading {
  opacity: 0;
  animation: hello-blur-effect 7s ease;
  opacity: 1;
}

.hero-content {
  font: 600 20px Raleway;
  color: white;
  line-height: 150%;
  opacity: 0;
  animation: hello-blur-effect 9s ease;
  opacity: 1;
}

@keyframes hello-blur-effect {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
/* HERO SECTION CONTENT BLUR ANIMATION //////////////////////// */

/* .hello.load,
.hero-heading.load,
.hero-content.load {
  left: 0;
  transition: all 1s ease-in-out 2s;
}

.hero-heading.load {
  transition: all 1s ease-in-out 1.5s;
}

.hero-content.load {
  transition: all 1s ease-in-out 2.5s;
} */

.hero-content #name {
  color: aqua;
  filter: var(--text-drop-shadow);
}

.hero-content #title {
  color: var(--pink-test);
  filter: var(--text-drop-shadow);
}

.word-tricks {
  color: white;
}

.letter-r {
  color: var(--blue-chrome-4);
  filter: var(--text-drop-shadow);
}

.text-link {
  color: var(--blue-chrome-4);
  filter: var(--text-drop-shadow);
  cursor: pointer;
}

.text-link:hover {
  color: aqua;
}

/* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
/* PAGE CONTENT /////////////////////////////////////////////// */
.content-row {
  background: var(--blue-chrome-2);
  color: var(--blue-chrome-4);
  padding: 20px;
  display: flex;
  gap: 10px;
  position: relative;
  transition: all 1.5s ease;
}

.content-row.row-1 {
  left: 100vw;
}
.content-row.row-1.open {
  left: 0;
}

.content-row.row-2 {
  background: var(--blue-chrome-4);
  color: var(--blue-chrome-3);
}

.content-row.row-3 {
  background: var(--blue-chrome-5);
  color: var(--blue-chrome-3);
}

.content-row .column {
  width: 50%;
  display: flex;
  flex-direction: column;
}

@media (max-width: 700px) {
  .content-row {
    flex-direction: column;
  }
  .content-row .column {
    width: 100%;
  }
}

.content-row .image {
  width: 100%;
  margin: auto;
  padding: 10px;
}

.content-heading {
  font: 600 25px Neonsign;
  padding: 10px 0;
}

.content-content {
  font: 600 20px Raleway;
  padding: 10px 0;
  /* position: relative; */
}

.content-2 {
  background: var(--blue-chrome-4);
  color: var(--blue-chrome-1);
}

.content-3 {
  background: var(--blue-chrome-5);
  color: var(--blue-chrome-4);
}

.content-3 .content-heading,
.content-3 .content-content {
  filter: drop-shadow(-2px 2px 0 var(--blue-chrome-3));
}

